Fix deprecations in Jekyll config
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-safe:       true
-auto:       true
-pygments:   true
-paginate:   6
-markdown:   rdiscount
+safe:        true
+highlighter: pygments
+paginate:    6
+markdown:    rdiscount
